add functionality for playing game

--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
         <div id="quiz-container">
           <div id="question-container" class="question-container">
             <h3 id="question">Question</h3>
-            <div class="answers" for="answer0">
-              <label id="answer0"><span>A</span></label
+            <div class="answers">
+              <label id="label0" for="answer0"><span>A</span></label
               ><input type="radio" name="answer" value="0" id="answer0" />
-              <label id="answer1" for="answer1"> <span>B</span></label
+              <label id="label1" for="answer1"> <span>B</span></label
               ><input type="radio" name="answer" value="1" id="answer1" />
-              <label id="answer2" for="answer2"> <span>C</span></label
+              <label id="label2" for="answer2"> <span>C</span></label
               ><input type="radio" name="answer" value="2" id="answer2" />
-              <label id="answer3" for="answer3"> <span>D</span></label
+              <label id="label3" for="answer3"> <span>D</span></label
               ><input type="radio" name="answer" value="3" id="answer3" />
             </div>
           </div>
