change HTML structure

--- a/index.html
+++ b/index.html
@@ -17,21 +17,25 @@
       <section id="game" class="game hidden">
         <!-- hidden -->
         <h2>Let's play!</h2>
-        <div id="quiz-container">
-          <div id="question-container" class="question-container">
-            <h3 id="question">Question</h3>
-            <div class="answers">
-              <label id="label0" for="answer0"><span>A</span></label
-              ><input type="radio" name="answer" value="0" id="answer0" />
-              <label id="label1" for="answer1"> <span>B</span></label
-              ><input type="radio" name="answer" value="1" id="answer1" />
-              <label id="label2" for="answer2"> <span>C</span></label
-              ><input type="radio" name="answer" value="2" id="answer2" />
-              <label id="label3" for="answer3"> <span>D</span></label
-              ><input type="radio" name="answer" value="3" id="answer3" />
-            </div>
+        <div id="question-container" class="question-container">
+          <h3 id="question">Question</h3>
+
+          <div class="answer-container">
+            <p class="answer-prefix">A</p>
+            <p class="answer-text">Choice 1</p>
           </div>
-          <button id="next-button" class="btn">Next</button>
+          <div class="answer-container">
+            <p class="answer-prefix">B</p>
+            <p class="answer-text">Choice 2</p>
+          </div>
+          <div class="answer-container">
+            <p class="answer-prefix">C</p>
+            <p class="answer-text">Choice 3</p>
+          </div>
+          <div class="answer-container">
+            <p class="answer-prefix">D</p>
+            <p class="answer-text">Choice 4</p>
+          </div>
         </div>
       </section>
     </div>
