change the way of dispaying question

--- a/index.html
+++ b/index.html
@@ -22,19 +22,19 @@
 
           <div class="answer-container">
             <p class="answer-prefix">A</p>
-            <p class="answer-text">Choice 1</p>
+            <p class="answer-text" data-number="0">Choice 1</p>
           </div>
           <div class="answer-container">
             <p class="answer-prefix">B</p>
-            <p class="answer-text">Choice 2</p>
+            <p class="answer-text" data-number="1">Choice 2</p>
           </div>
           <div class="answer-container">
             <p class="answer-prefix">C</p>
-            <p class="answer-text">Choice 3</p>
+            <p class="answer-text" data-number="2">Choice 3</p>
           </div>
           <div class="answer-container">
             <p class="answer-prefix">D</p>
-            <p class="answer-text">Choice 4</p>
+            <p class="answer-text" data-number="3">Choice 4</p>
           </div>
         </div>
       </section>
