--- a/index.html
+++ b/index.html
@@ -17,6 +17,17 @@
       <section id="game" class="game hidden">
         <!-- hidden -->
         <h2>Let's play!</h2>
+        <div class="info-container">
+          <div>
+            <p class="info-title">Question</p>
+            <p class="info-text" id="questionCounter">1/3</p>
+          </div>
+          <div>
+            <p class="info-title">Score</p>
+            <p class="info-text" id="score">0</p>
+          </div>
+        </div>
+
         <div id="question-container" class="question-container">
           <h3 id="question">Question</h3>
 
