--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <section id="home" class="home">
         <h1>Quiz Game</h1>
         <a id="play-btn" class="btn" href="#game">Play</a>
-        <a class="btn" href="#result">High Scores</a>
+        <a id="high-scores-btn" class="btn" href="#highScores">High scores</a>
       </section>
 
       <section id="game" class="game hidden">
@@ -51,7 +51,7 @@
       </section>
       <!-- hidden -->
       <section id="result" class="result hidden">
-        <h2>Score</h2>
+        <h2>Your score</h2>
         <p class="final-score">0</p>
         <form>
           <input
@@ -65,7 +65,12 @@
           </button>
         </form>
         <a class="btn" href="#game">Play Again</a>
-        <a class="btn" href="/">Go Home</a>
+        <a class="btn" href="/">Go home</a>
+      </section>
+      <section id="highScores" class="high-scores hidden">
+        <h2>High scores</h2>
+        <ul id="highScoresList" class="high-scores-list"></ul>
+        <a class="btn" href="/">Go home</a>
       </section>
     </div>
     <script src="script.js"></script>
