--- a/index.html
+++ b/index.html
@@ -29,23 +29,23 @@
         </div>
 
         <div id="question-container" class="question-container">
-          <h3 id="question">Question</h3>
+          <h3 id="question"></h3>
 
           <div class="answer-container">
             <p class="answer-prefix">A</p>
-            <p class="answer-text" data-number="0">Choice 1</p>
+            <p class="answer-text" data-number="0"></p>
           </div>
           <div class="answer-container">
             <p class="answer-prefix">B</p>
-            <p class="answer-text" data-number="1">Choice 2</p>
+            <p class="answer-text" data-number="1"></p>
           </div>
           <div class="answer-container">
             <p class="answer-prefix">C</p>
-            <p class="answer-text" data-number="2">Choice 3</p>
+            <p class="answer-text" data-number="2"></p>
           </div>
           <div class="answer-container">
             <p class="answer-prefix">D</p>
-            <p class="answer-text" data-number="3">Choice 4</p>
+            <p class="answer-text" data-number="3"></p>
           </div>
         </div>
       </section>
@@ -64,7 +64,7 @@
             Save
           </button>
         </form>
-        <a class="btn" href="#game">Play Again</a>
+        <a class="btn" href="#game" id="play-again">Play Again</a>
         <a class="btn" href="/">Go home</a>
       </section>
       <section id="highScores" class="high-scores hidden">
