make minor changes

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
       <section id="highScores" class="high-scores hidden">
         <h2>High scores</h2>
         <ul id="highScoresList" class="high-scores-list"></ul>
-        <a class="btn" href="/">Go home</a>
+        <a class="btn" href="#home">Go home</a>
       </section>
     </div>
     <script src="script.js"></script>
