--- a/index.html
+++ b/index.html
@@ -92,12 +92,11 @@
       </section>
 
       <section id="game" class="game hidden">
-        <!-- hidden -->
         <h2>Let's play!</h2>
         <div class="info-container">
           <div>
             <p class="info-title">Question</p>
-            <p class="info-text" id="questionCounter">1/3</p>
+            <p class="info-text" id="question-counter">1/3</p>
           </div>
           <div>
             <p class="info-title">Score</p>
@@ -147,11 +146,11 @@
             Save
           </button>
         </form>
-        <a class="btn" href="/">Go home</a>
+        <a class="btn" href="#home">Go home</a>
       </section>
       <section id="highScores" class="high-scores hidden">
         <h2>High scores</h2>
-        <ul id="highScoresList" class="high-scores-list"></ul>
+        <ul id="high-scores-list" class="high-scores-list"></ul>
         <a class="btn" href="#home">Go home</a>
       </section>
     </div>
